<resources>
    <string name="app_id" translatable="false">bc54d842ee8714f26c0629b2c4b5da2c</string>
    <string name="app_name">Weather</string>
    <string name="wind">Wind</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind\'s speed (m/s)</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="today">Today</string>
    <string name="ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="view_week">View this week</string>
    <string name="share">Share on Facebook</string>
    <string name="more">More</string>
    <string name="facebook_app_id" translatable="false">2051894405032275</string>
    <string name="detail">Detail</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="search">Search</string>
    <string name="warning">Warning</string>

    <string name="no_data">No data</string>
    <string name="unknown" translatable="false">Unknown</string>
    <string name="enable_wifi" translatable="false">Please turn on wifi. Then pull to refresh</string>

    <string name="vietnam">Vietnam</string>
    <string name="chinese">China</string>
    <string name="japan">Japan</string>
    <string name="korean">Korean</string>
    <string name="england">England</string>
    <string name="usa">USA</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="back_again">Please click BACK again to exit</string>
    <string name="temp_label">Temperature (°C)</string>

</resources>
