<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/more"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#e25108"
        android:gravity="center_vertical|end"
        android:layout_gravity="bottom"
        android:onClick="onViewClick"
        android:text="@string/detail"
        android:drawableEnd="@drawable/ic_play"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/secondary_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hanoi, Vietnam"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="24sp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/temperature"
                android:textColor="@color/black" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="1000dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/wind"
                android:textColor="@color/black" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/wind_chart"
                android:layout_width="1000dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="18dp" />
        </LinearLayout>
    </HorizontalScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 km/h"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_wind"
                android:drawablePadding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="101.6mb"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_pressure"
                android:drawablePadding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="51%"
                android:textSize="18sp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_humidity"/>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.share.widget.ShareButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true" />
        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/transparent"
            android:onClick="shareFacebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>